--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 *.exec
+DupShell
+ForkCompress
+MeasureRunningSpeed
+MiniShell
+MoreShell
+MyCompress
+MyDecompress
+ParFork
+ParThread
+PipeCompress
